# KEAsked

./: .gitignore  SM-rules.md  Scheduling-Procedures.docx  Shifts.md  analyze_schedules.py  build_backend.bat  build_backend.sh  request-submission-rules.md  scheduler_server.spec
.github/workflows/: build.yml
frontend/: electron-vite.config.js  package-lock.json  package.json  tailwind.config.js
frontend/scripts/: notarize.js
frontend/src/main/: index.js
frontend/src/preload/: index.js
frontend/src/renderer/: App.jsx  api.js  index.html
frontend/src/renderer/components/: ConflictModal.jsx  DirectoryPicker.jsx  Header.jsx  OnCallModal.jsx  ReplaceModal.jsx  ScheduleGrid.jsx  Sidebar.jsx  ValidationPanel.jsx
frontend/src/renderer/styles/: index.css
scheduler/: pyproject.toml  requirements.txt
scheduler/api/: schemas.py  server.py
scheduler/backend/: config.py  generator.py  generator_cpsat.py  history.py  importer.py  importer_flat.py  models.py  shifts.py  validator.py
scheduler/backend/tests/: test_validator.py
scheduler/config/: physicians.yaml  physicians_template.yaml  scheduler_config.template.yaml
tools/: compare_schedules.py
